Overflow: increase padding to prevent vertical scrollbar in chrome on mac

--- a/designsystem/css/main.css
+++ b/designsystem/css/main.css
@@ -184,6 +184,11 @@ code {
   .path-mod-page #region-main > div > h2::after {
     display: none; }
 
+/* hide veritcal scrollbar in chrome on mac */
+.no-overflow {
+  padding-bottom: 2px;
+}
+
 header.navbar {
   font-size: 14px; }
   header.navbar .container-fluid {
